# project-manager-mcp-server

./: .gitignore  CONTEXT_MANAGER_GUIDE.md  EMOJI_GUIDELINES.md  GUIDES.md  PROJECT_CUSTOMIZATION_GUIDE.md  README.md  SAFETY_GUIDELINES.md  SHELL_COMMAND_GUIDELINES.md  TODO.md  TROUBLESHOOTING.md  main.py  pyproject.toml  requirements.txt
config/: README.md  credentials.json.template  git_credentials_template.md
tools/: base_project_manager.py  context_manager.py  git_tools.py  mcp_project_manager.py  shell_mcp_server.py  skip_patterns.py  vscode_llm_chat_project_manager.py
tools/git/: __init__.py  credentials.py  git_tools.py
