[project]
name = "project-manager-mcp-server"
version = "0.2.0"
description = "A safety-first Model Context Protocol server for managing any development project with safe file operations, shell execution, and intelligent local context management"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "project-management", "file-operations", "shell", "commands", "developer-tools", "local-context"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)"
]

dependencies = [
    "mcp>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/project-manager-mcp-server"
Repository = "https://github.com/yourusername/project-manager-mcp-server"
Issues = "https://github.com/yourusername/project-manager-mcp-server/issues"

[project.scripts]
project-manager-mcp-server = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "*.py"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]
